--- a/lerna.json
+++ b/lerna.json
@@ -1,5 +1,12 @@
 {
   "$schema": "node_modules/lerna/schemas/lerna-schema.json",
   "version": "0.0.0",
-  "npmClient": "yarn"
+  "npmClient": "yarn",
+  "command": {
+    "publish": {
+      "verifyAccess": false,
+      "registry": "https://npm.pkg.github.com/",
+      "access": "public"
+    }
+  }
 }
