--- a/packages/package-a/package.json
+++ b/packages/package-a/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "package-a",
+  "name": "@mashikag/package-a",
   "packageManager": "yarn@4.1.0",
   "version": "1.0.0",
   "main": "index.js",
