--- a/.github/workflows/publish-package-a.yml
+++ b/.github/workflows/publish-package-a.yml
@@ -13,6 +13,9 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
+      - name: Enable Corepack
+        run: corepack enable
+
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
