--- a/packages/package-b/package.json
+++ b/packages/package-b/package.json
@@ -4,7 +4,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "dependencies": {
-    "package-a": "^1.0.0"
+    "@mashikag/package-a": "^1.0.0"
   },
   "scripts": {
     "test": "echo \"Running package-b tests\"",
