Update lern publish command to use the scoped name of the package

--- a/.github/workflows/publish-package-a.yml
+++ b/.github/workflows/publish-package-a.yml
@@ -26,6 +26,6 @@ jobs:
         run: yarn install
 
       - name: Publish Package A
-        run: npx lerna publish --scope package-a --yes
+        run: npx lerna publish --scope @mashikag/package-a --yes
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
