--- a/packages/package-b/package.json
+++ b/packages/package-b/package.json
@@ -12,5 +12,6 @@
   },
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/"
-  }
+  },
+  "gitHead": "8db317cd205d90795fc7b0c5a0c76d0c1c6f8a92"
 }
