--- a/packages/package-a/package.json
+++ b/packages/package-a/package.json
@@ -5,5 +5,6 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Running package-a tests\""
-  }
+  },
+  "gitHead": "8db317cd205d90795fc7b0c5a0c76d0c1c6f8a92"
 }
